--- a/docs/source/1.1 Register and Check the System.rst
+++ b/docs/source/1.1 Register and Check the System.rst
@@ -1,7 +1,7 @@
 Create an account on Amazon
 =============================
 
-.. info::
+.. note::
 
    To log in, you must use an Amazon e-commerce account.
    If you don’t have one, you can create one by following these steps:
