--- a/docs/source/1.1 Register and Check the System.rst
+++ b/docs/source/1.1 Register and Check the System.rst
@@ -18,6 +18,11 @@ Steps to Create an Amazon Account
    :width: 7000px
 
 2. Select Create a new Amazon account
+
+.. image:: pictures/image2.png
+   :align: center
+   :width: 7000px
+
 3. Enter User name
 4. Enter Mobile number and Email address to connect
 5. Enter Password
