Update 1.1 Create an Account on Amazon .rst

--- a/docs/source/1.1 Create an Account on Amazon .rst
+++ b/docs/source/1.1 Create an Account on Amazon .rst
@@ -1,6 +1,5 @@
-.. raw:: html
-
-   <h1 class="center-title">Create an Account on Amazon</h1>
+Create an Account on Amazon
+=====================
 
 .. admonition:: Info
 
