--- a/docs/source/1.1 Create an Account on Amazon.rst
+++ b/docs/source/1.1 Create an Account on Amazon.rst
@@ -1,6 +1,6 @@
-Create an Account on Amazon
-=====================
+.. raw:: html
 
+   <h1 style="text-align: center;">Create an Account on Amazon</h1>
 .. admonition:: Info
 
    To log in, you must use an Amazon e-commerce account.
