--- a/docs/source/1.2 Login to Amazon account.rst
+++ b/docs/source/1.2 Login to Amazon account.rst
@@ -19,6 +19,16 @@ Steps to Sign In to AWS Training and Certification
 
 1. Go to https://skillbuilder.aws/
 2. Click **SIGN IN TO AWS SKILL BUILDER**
+3. The AWS Training and Certification login interface appears, select Login with Amazon
+4. Amazon login page appears:
+- Enter Email or mobile phone number
+- Enter Password
+- Then, select Sign-in
+5. After logging in, the AWS Training and Certification interface appears.
+
+.. note::
+
+   Note: During the login process, as shown in the picture, select Allow
 
 
 
