Update 1.2 Login to Amazon account.rst

--- a/docs/source/1.2 Login to Amazon account.rst
+++ b/docs/source/1.2 Login to Amazon account.rst
@@ -19,11 +19,11 @@ Steps to Sign In to AWS Training and Certification
 
 1. Go to https://skillbuilder.aws/
 2. Click **SIGN IN TO AWS SKILL BUILDER**
-3. The AWS Training and Certification login interface appears, select Login with Amazon
-4. Amazon login page appears:
-- Enter Email or mobile phone number
-- Enter Password
-- Then, select Sign-in
+3. The AWS Training and Certification login interface appears. Select **Login with Amazon**
+4. The Amazon login page appears:
+   - Enter **Email or mobile phone number**
+   - Enter **Password**
+   - Then, select **Sign-In**
 5. After logging in, the AWS Training and Certification interface appears.
 
 .. note::
