--- a/docs/source/1.1.1Register and Test the System.rst
+++ b/docs/source/1.1.1Register and Test the System.rst
@@ -4,11 +4,26 @@ Register And Test The System
 
 After logging in, the AWS Training and Certification interface appears with the courses.
 
-1. Find and select AWS Cloud Quest: Cloud Practitioner
-2. Continue, select ENROLL
-3. After selecting ENROLL, select START LEARNING NOW
-4. Select Trailer Youtube video for an overview of AWS Cloud Quest: Cloud Practitioner
-5. After watching the video, select System Requirements to check system requirements
+1. Find and select AWS Cloud Quest: Cloud Practitioner.
+2. Continue, select ENROLL.
+
+.. image:: pictures/image9.png
+   :align: center
+   :width: 7000px
+
+3. After selecting ENROLL, select START LEARNING NOW.
+
+.. image:: pictures/image10.png
+   :align: center
+   :width: 7000px
+
+4. Select Trailer Youtube video for an overview of AWS Cloud Quest: Cloud Practitioner.
+
+.. image:: pictures/image11.png
+   :align: center
+   :width: 7000px
+
+5. After watching the video, select System Requirements to check system requirements.
 
 - **OS**: 64-bit operating system (Windows, macOS, and Linux)
 - **Storage**: 1GB available space
@@ -18,6 +33,10 @@ After logging in, the AWS Training and Certification interface appears with the 
 - **Browser**: Firefox, Microsoft Edge, and Google Chrome  
   *(HTML5, WebGL 1.0 or 2.0, WASM required)*
 - **Mobile Browsers**: Not supported
+
+.. image:: pictures/image12.png
+   :align: center
+   :width: 7000px
 
 
 6. After checking the system, select Play AWS Cloud Quest: Cloud Practitioner
@@ -37,8 +56,22 @@ After logging in, the AWS Training and Certification interface appears with the 
 - Highly Available Web Applications
 
 8. Select PLAY NOW! (wait a few minutes for the theme to load)
+
+.. image:: pictures/image13.png
+   :align: center
+   :width: 7000px
+
 9. AWS Cloud Quest: Cloud Practitioner interface appears, select START GAME (takes time to load the game)
+
+.. image:: pictures/image14.png
+   :align: center
+   :width: 7000px
+
 10. Done, the city interface has appeared.
+
+.. image:: pictures/image15.png
+   :align: center
+   :width: 7000px
 
 
 
